More enhancements to Pelt Theme, FOR-811. Move white line into correct position, now it is visible
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@514623 13f79535-47bb-0310-9956-ffa450edef68

--- a/whiteboard/plugins/org.apache.forrest.themes.core/themes/pelt/css/pelt.screen.css
+++ b/whiteboard/plugins/org.apache.forrest.themes.core/themes/pelt/css/pelt.screen.css
@@ -138,7 +138,9 @@ table caption {
     width: 100%;
     background-color: #294563;
     background-image: url('../themes/images/header_white_line.gif');
-    background-position: bottom left;
+    /* % values for background position: 100% 85%
+    px is slightly more accurate */
+    background-position: 0px 107px;
     background-repeat: repeat-x;
 }
 
